3/kuard-searvice.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kuard
  name: kuard-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kuard
  type: ClusterIP
