3/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard-ingress
spec:
  rules:
  - host: k8s.aaa
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard-service
          servicePort: 8080
